tests/e2e/tests/pilot/testdata/networking/v1alpha3/wildcard-https-google-no-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: wildcardgooglenovs
spec:
  hosts:
  - "*.google.co.*"
  endpoints:
  - address: google.co.uk
  - address: google.co.in
  location: MESH_EXTERNAL
  resolution: DNS
  ports:
    - number: 443
      name: https
      protocol: HTTPS
  resolution: NONE
  location: MESH_EXTERNAL
